# mcp-whisper-transcription

./: .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MODELS.md  README.md  SETUP.md  TROUBLESHOOTING.md  hallucination_filter.py  job_manager.py  package-lock.json  package.json  pyproject.toml  run_mcp_server.sh  setup_mcp_integration.sh  test_async_jobs.py  test_batch_transcribe.py  test_claude_code_simulation.py  test_hallucination_fix.py  test_mcp_connection.py  test_real_transcription.py  test_real_world_timeout.py  test_resource_endpoints.py  test_resources_basic.py  test_simple_async.py  test_support_tools.py  test_transcribe_tool.py  test_vad_improvement.py  transcribe_mlx.py  tsconfig.json  vad_processor.py  whisper_config.py  whisper_utils.py
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
claude_desktop_test/: README.md  test_claude_desktop.md
configurations/: INSTALLATION.md  claude_code_setup.sh  claude_desktop_config.json  merge_config.py
examples/: README.md  generate_test_audio.py  test_medium.md  test_medium.srt  test_medium.txt  test_numbers.md  test_numbers.srt  test_numbers.txt  test_short.md  test_short.srt  test_short.txt  usage_example.py
jobs/: jobs.json
output/: gary-quick-call-to-calm-me.json  gary-quick-call-to-calm-me.md  gary-quick-call-to-calm-me.srt  gary-quick-call-to-calm-me.txt  test_results.json
output/format_test/: gary-quick-call-to-calm-me.json  gary-quick-call-to-calm-me.md  gary-quick-call-to-calm-me.srt  gary-quick-call-to-calm-me.txt
output/hallucination_test/: gary-quick-call-to-calm-me.json  gary-quick-call-to-calm-me.txt  whisper-base-mlx_analysis.json  whisper-large-v3-turbo_analysis.json
output/hallucination_test/base_model/: gary-quick-call-to-calm-me.json  gary-quick-call-to-calm-me.txt
output/model_comparison_whisper-base-mlx/: gary-quick-call-to-calm-me.txt
output/model_comparison_whisper-large-v3-turbo/: gary-quick-call-to-calm-me.txt
output/model_comparison_whisper-tiny-mlx/: gary-quick-call-to-calm-me.txt
output/subprocess_test/: gary-quick-call-to-calm-me.txt
output/vad_test/no_vad/: gary-quick-call-to-calm-me.json  gary-quick-call-to-calm-me.txt
src/: index.ts  whisper_mcp_server.py
test_files/: gary-37min.md  gary-37min.srt  gary-37min.txt  gary-4min.md  gary-4min.srt  gary-4min.txt
tests/: test_errors.py  test_mcp_tools.py  test_performance.py  test_resources.py  test_transcriber.py  test_transcription.py
