[tool.poetry]
name = "mcp-whisper-transcription"
version = "1.0.0"
description = "FastMCP server for audio/video transcription using MLX Whisper models"
authors = ["Sang Le <dev@sangleml.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sangleml/mcp-whisper-transcription"
keywords = ["mcp", "whisper", "transcription", "mlx", "fastmcp", "audio", "video", "speech-to-text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
]
packages = [{include = "src"}]

[tool.poetry.scripts]
mcp-whisper = "src.whisper_mcp_server:main"

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = ">=2.0.0"
mlx-whisper = ">=0.4.2"
ffmpeg-python = ">=0.2.0"
tqdm = ">=4.66.0"
psutil = ">=5.9.0"
humanize = ">=4.8.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"